--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>PokeGGStats</title>
   </head>
   <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
